--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "mqtt-pattern": "^1.1.3",
     "nats": "^1.3.2",
+    "node-cdc-proto": "rigoiot/node-cdc-proto",
     "uuid": "^3.2.1"
   }
 }
